--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-index.html
+index.html https://github.com/NBA3030163229/git-demo.git
+<script>
+    //https://github.com/NBA3030163229/git-demo.git
+</script>
+https://github.com/NBA3030163229/git-demo.git https://github.com/NBA3030163229/git-demo.git https://github.com/NBA3030163229/git-demo.git
