--- a/index.html
+++ b/index.html
@@ -11,3 +11,6 @@ https://github.com/NBA3030163229/git-demo.git https://github.com/NBA3030163229/g
     555555555
 </script>
 666677777888889999999999966666666666gitdddddddddd
+<style>
+    测试sshkey免登录 git@github.com: NBA3030163229/git-demo.git
+</style>
